--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "monicahq/laravel-cloudflare": "^1.7",
         "pda/pheanstalk": "^4.0",
         "predis/predis": "^1.1",
+        "spatie/laravel-webhook-server": "^3.1",
         "wildbit/swiftmailer-postmark": "^3.3"
     },
     "require-dev": {
