S3 file upload functionality has been added. template and other small fixes and upgrades.

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,11 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+
+DO_ACCESS_KEY_ID={Your-Key}
+DO_SECRET_ACCESS_KEY={Your-Secret}
+DO_DEFAULT_REGION={Your-region}
+DO_BUCKET={Your-bucket}
+DO_FOLDER={The-folder-inside-your-bucket}
+DO_ENDPOINT=https://{Your-region}.digitaloceanspaces.com/
+DO_USE_PATH_STYLE_ENDPOINT=false
