--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^2.8",
         "laravel/slack-notification-channel": "^2.3",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "livewire/livewire": "^2.3",
         "monicahq/laravel-cloudflare": "^1.7",
         "pda/pheanstalk": "^4.0",
