N+1 query issues has been fixed. speed optimizations. Test for files functionality has been added.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "aws/aws-sdk-php": "^3.171",
         "blade-ui-kit/blade-heroicons": "^0.3.1",
         "doctrine/dbal": "^3.0",
@@ -28,6 +28,7 @@
         "wildbit/swiftmailer-postmark": "^3.3"
     },
     "require-dev": {
+        "beyondcode/laravel-query-detector": "^1.7",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^0.0.5",
