secure file storage selecting functionality has been added.

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,5 @@ DO_BUCKET={Your-bucket}
 DO_FOLDER={The-folder-inside-your-bucket}
 DO_ENDPOINT=https://{Your-region}.digitaloceanspaces.com/
 DO_USE_PATH_STYLE_ENDPOINT=false
+
+SECURE_FILES_DISK=spaces
